apps/gallery/style/open.css
* { -moz-box-sizing: border-box; }

html {
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
  overflow: hidden;
  font-size: 1rem;
}

body {
  background-color: black;
  color: #fff;
  font-family: "MozTT", sans-serif;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
  padding-bottom: 5rem;
}

#open {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  overflow: hidden;
}

/* like .frame in gallery.css */
#frame {
  position: absolute;
  top: 5rem;
  left: 0;
  width: 100%;
  bottom: 0;
  padding: 0;
  margin: 0;
  overflow: hidden;
  -moz-user-select: none;
}

#frame > img {
  top: 0;  /* javascript modifies this position with a transform */
  left: 0;
  position: absolute;
  border-width: 0;
  padding: 0;
  margin: 0;
  transform-origin: 0 0;
  pointer-events: none;
  -moz-user-select: none;
}

*.hidden {
  display:none;
}

